[project]
name = "agenticaiworkspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "langchain>=0.3.27",
    "langchain-community>=0.3.31",
    "langchain-groq>=0.3.8",
    "langchain-tavily>=0.2.12",
    "langgraph>=0.6.9",
    "langgraph-cli[inmem]>=0.4.4",
    "langsmith>=0.4.33",
    "python-dotenv>=1.1.1",
]
